--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,58 @@
     <title>BootstrAPI</title>
 
     <!-- Bootstrap CSS and JS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
-    <div class="api-section">
+
+
+
+    <div id="dog" class="card">
         <h1>
-            Part 1: Random Dog Generator
+            Random Dog Generator 🐶
         </h1>
-        <div class="api-content">
-            [INSERT RANDOM DOG GENERATOR HERE]
-        </div>
+        <button id="dogButton" type="button" class="btn btn-dark">Fetch</button>
+        <img width="650px" height="300px">
     </div>
 
-    <div class="api-section">
-        <h1>
-            Part 2: Weather App
-        </h1>
-        <div class="api-content">
-            [INSERT WEATHER APP HERE]
-        </div>
-    </div>
 
-    <script src="main.js"></script>
+    <div class="api-section">
+        <h1 class="weather"> Weather Application 🌤</h1>
+
+
+        <div class="api-content">
+            <div><label for="">Enter City 🌇</label></div>
+
+            <div class="firstCont">
+                <div><input id="input" type="text" placeholder="City"></div>
+                <div><button type="button" id="button" class="btn btn-dark"> SUBMIT</button></div>
+            </div>
+
+            <div id="container">
+
+
+
+                <div id="city"></div>
+                <div id="desc"></div>
+                <div id="temp"></div>
+                <div id="wind"></div>
+
+            </div>
+
+
+
+
+
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
+
+        <script src="main.js"></script>
 </body>
+
 </html>
